--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dyxmrsr4a",
+    "ApiKey": "843723491257431",
+    "ApiSecret": "Cms8_nEOc7j07Rkq6vHSGwwMewE"
+  }
 }
